--- a/01-Fundamentals-Part-1/final/index.html
+++ b/01-Fundamentals-Part-1/final/index.html
@@ -24,7 +24,7 @@
       color: white;
     }
 
-    <p>This is just a testing commit</p>
+    <p>This is just a testing commit</p><p>This is just a testing commit</p>
   </style>
 </head>
 
