Testing second commit
Testing commit 2

--- a/02-Fundamentals-Part-2/final/index.html
+++ b/02-Fundamentals-Part-2/final/index.html
@@ -29,6 +29,7 @@
 <body>
   <h1>JavaScript Fundamentals – Part 2</h1>
   <p>This is another commit on my personal branch </p>
+  <p>This is another commit on my personal branch 2 </p>
   <script src="script.js"></script>
 </body>
 
